@@ -1,3 +1,12 @@
+2009-07-06  Roland McGrath  <roland@redhat.com>
+
+	* parisc_init.c: New file.
+	* parisc_corenote.c: New file.
+	* parisc64_corenote.c: New file.
+	* Makefile.am (libebl_pic): Add parisc backend.
+	(parisc_SRCS): New variable.
+	(libebl_parisc_pic_a_SOURCES, am_libebl_parisc_pic_a_OBJECTS): Likewise.
+
 2009-06-01  Ulrich Drepper  <drepper@redhat.com>
 
 	* i386_reloc.def: Add IRELATIVE entry.
